United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7125879 assert(proj != NULL) failed: must be found
7125879 : assert(proj != NULL) failed: must be found

Details
Type:
Bug
Submit Date:
2011-12-29
Status:
Closed
Updated Date:
2013-04-24
Project Name:
JDK
Resolved Date:
2012-03-29
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
The nightly test failed with assert modified in 7123954 fix:

$ java -d64 -XX:-TieredCompilation -Xcomp -Xmx128M -XX:CICompilerCount=1 Test

# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/compile.cpp:2525
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/net/irkutsk.us.oracle.com/export/home/kvn/work2/hg/nestlck/src/share/vm/opto/compile.cpp:2525), pid=23702, tid=139817553729296
#  assert(proj != NULL) failed: must be found
#
# JRE version: 6.0_25-b06
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b08-internal-fastdebug compiled mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /export/kvn/build/nestlck/linux_amd64_compiler2/fastdebug/hs_err_pid23702.log
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x00007f2a0819e800):  JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=23731, stack(0x00007f29cf8f9000,0x00007f29cf9fa000)]

Stack: [0x00007f29cf8f9000,0x00007f29cf9fa000],  sp=0x00007f29cf9f4610,  free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0xc21463]  VMError::report_and_die()+0x173
V  [libjvm.so+0x5c15f3]  report_vm_error(char const*, int, char const*, char const*)+0x83
V  [libjvm.so+0x543bfd]  final_graph_reshaping_walk(Node_Stack&, Node*, Final_Reshape_Counts&)+0x1f3d
V  [libjvm.so+0x543f5b]  Compile::final_graph_reshaping()+0x23b
V  [libjvm.so+0x545b77]  Compile::Optimize()+0x1457
V  [libjvm.so+0x5498c4]  Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool)+0x1834
V  [libjvm.so+0x45f670]  C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x1e0
V  [libjvm.so+0x5505ee]  CompileBroker::invoke_compiler_on_method(CompileTask*)+0x49e
V  [libjvm.so+0x5515a3]  CompileBroker::compiler_thread_loop()+0x6b3
V  [libjvm.so+0xbc5406]  JavaThread::thread_main_inner()+0x196
V  [libjvm.so+0xa2abd2]  java_start(Thread*)+0x122


Current CompileTask:
C2:   2345  357    b        Test::func_2 (232 bytes)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/9c87bcb3b4dd
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/9c87bcb3b4dd
                                     
2011-12-30
EVALUATION

Case of new array with negative size known during compilation. AllocateArrayNode::Ideal() optimization disconnect unreachable following code since call to runtime will throw exception. As result there will be no users of i_o after the call.

Leave i_o attached to slow allocation call to avoid problems in preceding graph.
                                     
2011-12-30



Hardware and Software, Engineered to Work Together