7125879: assert(proj != NULL) failed: must be found

Leave i_o attached to slow allocation call when there are no i_o users after the call.

Reviewed-by: iveresov, twisti